--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.2"
