Preparing for nginx transfer.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,26 +19,23 @@ services:
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: admin
       ME_CONFIG_MONGODB_ADMINPASSWORD: mongo
-      ME_CONFIG_MONGODB_SERVER: mongo
-  frontend:
-    image: kirillsch/freestyle-frontend:1.6
-    #volumes:
-      #- ./server/db.json:/app/db.json
-    #command: ["/bin/sh", ]
-    ports:  
-      - "5173:5173"
-    restart: unless-stopped
-    depends_on :
-     - backend
+      ME_CONFIG_MONGODB_SERVER: mongo  
   backend:
-    image: kirillsch/freestyle-backend:1.5
-    #volumes:
-     # - ./server/db.json:/app/db.json
+    build: ./server    
     ports:
-      - "8080:3000"
+      - "3000:3000"
     depends_on:
       - mongo
     restart: unless-stopped
+  nginx:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
+    restart: unless-stopped      
 volumes:
   db_data:
     
