Added seperate nginx folder and Dockerfile.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,10 +13,10 @@ http {
         }
 
         location /api/ {
-            proxy_pass https://server:3000;
+            proxy_pass https://backend:3000;
             proxy_set_header Host $host;
-            proxy_set_header X-Real_IP $remote_addr;
-            proxy_set_header X_Forward_For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
 }
