--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18-alpine
+FROM node:18-alpine AS builder
 
 WORKDIR /app
 
@@ -6,8 +6,12 @@ COPY package.json package-lock.json ./
 RUN npm install
 
 COPY . .
-RUN npm build
+RUN npm run build
 
 FROM nginx:latest
 
 COPY --from=builder /app/dist /usr/share/nginx/html
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
