--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,13 @@ services:
       ME_CONFIG_MONGODB_ADMINUSERNAME: admin
       ME_CONFIG_MONGODB_ADMINPASSWORD: mongo
       ME_CONFIG_MONGODB_SERVER: mongo  
+  frontend:
+    build: ./client
+    volumes:
+      - ./client/dist:/usr/share/nginx/html
+    depends_on:
+      - backend
+    restart: unless-stopped
   backend:
     build: ./server    
     ports:
@@ -27,13 +34,12 @@ services:
     depends_on:
       - mongo
     restart: unless-stopped
-  nginx:
-    build:
-      context: ./client
-      dockerfile: Dockerfile
+  nginx:    
+    build: ./nginx    
     ports:
       - "80:80"
     depends_on:
+      - frontend
       - backend
     restart: unless-stopped      
 volumes:
