--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,6 @@
-FROM node:18.20-alpine
+##BUILD ENVIRONMENT##
+
+FROM node:18.20-alpine As build
 
 WORKDIR /app
 
@@ -6,8 +8,20 @@ COPY package.json package-lock.json ./
 
 RUN npm install
 
-RUN apk update && apk add bash
+#RUN apk update && apk add bash
 
-COPY . ./
+COPY . .
 
-CMD [ "npm", "run", "dev", "--", "--host"]
+RUN npm run build
+
+##PRODUCTION ENVIRONMENT##
+
+FROM nginx:alpine As production
+
+COPY nginx/default.conf /etc/nginx/conf.d/default.conf
+
+COPY --from=build /app/dist /usr/share/nginx/html
+
+EXPOSE 80
+
+ENTRYPOINT [ "nginx", "-g", "daemon off;" ]
