--- a/server-deploy.yaml
+++ b/server-deploy.yaml
@@ -14,13 +14,19 @@ spec:
     spec:
       containers:
       - name: server-freestyle
-        image: 727646485811.dkr.ecr.eu-central-1.amazonaws.com/freestyle-project/server
+        image: 727646485811.dkr.ecr.eu-central-1.amazonaws.com/freestyle-project/server:1.2
         resources:
           limits:
             memory: "128Mi"
             cpu: "500m"
         ports:
         - containerPort: 3000
+        env:
+        - name: MONGODB_STRING
+          valueFrom:
+            secretKeyRef:
+              name: server-secret
+              key: MONGODB_STRING
 ---
 apiVersion: v1
 kind: Service
@@ -31,6 +37,7 @@ spec:
   selector:
     app: server-freestyle
   ports:
-  - port: 3000
-    targetPort: 3000
+    - protocol: TCP
+      port: 3000
+      targetPort: 3000
 
