--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,10 +6,6 @@ COPY package.json package-lock.json ./
 
 RUN npm install
 
-RUN apk add --no-cache bash
-
-ENV MONGODB_STRING=mongodb://admin:mongo@mongo:27017/
-
 COPY . ./
 
-CMD [ "npm", "run", "dev"]
+CMD [ "npm", "run", "start"]
