--- a/mongo-deploy.yaml
+++ b/mongo-deploy.yaml
@@ -23,8 +23,8 @@ spec:
         env:
         - name: MONGO_INITDB_ROOT_USERNAME
           valueFrom:
-            configMapKeyRef:
-              name: mongo-config
+            secretKeyRef:
+              name: mongo-secret
               key: MONGO_INITDB_ROOT_USERNAME
         - name: MONGO_INITDB_ROOT_PASSWORD
           valueFrom:
@@ -36,13 +36,13 @@ spec:
             configMapKeyRef:
               name: mongo-config
               key: MONGO_INITDB_DATABASE
-        volumeMounts:
-          - name: mongo-init-volume
-            mountPath: /docker-entrypoint-initdb.d
-      volumes:
-        - name: mongo-init-volume
-          configMap:
-            name: mongo-init-script
+      #  volumeMounts:
+      #    - name: mongo-init-volume
+      #      mountPath: /docker-entrypoint-initdb.d
+      #volumes:
+      #  - name: mongo-init-volume
+      #    configMap:
+      #      name: mongo-init-script
 ---
 apiVersion: v1
 kind: Service
