--- a/mongo-secret.yaml
+++ b/mongo-secret.yaml
@@ -4,4 +4,5 @@ metadata:
   name: mongo-secret
 type: Opaque
 data:
-  MONGO_INITDB_ROOT_PASSWORD: a2lyaWxsLWFkbWluNTU=
+  MONGO_INITDB_ROOT_PASSWORD: a2lyaWxsX2FkbWluNTU=
+  MONGO_INITDB_ROOT_USERNAME: Lm4ga2lyaWxsX2FkbWluCg==
