--- a/nginx-deploy.yaml
+++ b/nginx-deploy.yaml
@@ -14,13 +14,27 @@ spec:
     spec:
       containers:
       - name: nginx-freestyle
-        image: 727646485811.dkr.ecr.eu-central-1.amazonaws.com/freestyle-project/nginx:1.1
+        image: 727646485811.dkr.ecr.eu-central-1.amazonaws.com/freestyle-project/nginx:1.2
         resources:
           limits:
             memory: "128Mi"
             cpu: "500m"
         ports:
         - containerPort: 80
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          failureThreshold: 3
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 30
+          periodSeconds: 5
+          failureThreshold: 3
 ---
 apiVersion: v1
 kind: Service
