--- a/server-deploy.yaml
+++ b/server-deploy.yaml
@@ -27,6 +27,20 @@ spec:
             secretKeyRef:
               name: server-secret
               key: MONGODB_STRING
+          livenessProbe:
+            httpGet:
+              path: /health-check
+              port: 3000
+            initialDelaySeconds: 5
+            periodSeconds: 5
+            failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              path: /health-check
+              port: 3000
+            initialDelaySeconds: 30
+            periodSeconds: 5
+            failureThreshold: 3
 ---
 apiVersion: v1
 kind: Service
