--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,5 @@
 /client/node_modules
 /client/dist
 *.local
-.terraform.lock.hcl
-terraform.tfstate
-terraform.tfstate.backup
-.terraform
+*.terraform
+*.tfstate
