--- a/server-deploy.yaml
+++ b/server-deploy.yaml
@@ -14,11 +14,11 @@ spec:
     spec:
       containers:
       - name: server-freestyle
-        image: 727646485811.dkr.ecr.eu-central-1.amazonaws.com/freestyle-project/server:1.2
+        image: 727646485811.dkr.ecr.eu-central-1.amazonaws.com/freestyle-project/server:1.3
         resources:
           limits:
             memory: "128Mi"
-            cpu: "500m"
+            cpu: "500m" # 1 max
         ports:
         - containerPort: 3000
         env:
@@ -27,20 +27,20 @@ spec:
             secretKeyRef:
               name: server-secret
               key: MONGODB_STRING
-          livenessProbe:
-            httpGet:
-              path: /health-check
-              port: 3000
-            initialDelaySeconds: 5
-            periodSeconds: 5
-            failureThreshold: 3
-          readinessProbe:
-            httpGet:
-              path: /health-check
-              port: 3000
-            initialDelaySeconds: 30
-            periodSeconds: 5
-            failureThreshold: 3
+        livenessProbe:
+          httpGet:
+            path: /health-check
+            port: 3000
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          failureThreshold: 3
+        readinessProbe:
+          httpGet:
+            path: /health-check
+            port: 3000
+          initialDelaySeconds: 30
+          periodSeconds: 5
+          failureThreshold: 3
 ---
 apiVersion: v1
 kind: Service
