Fixed mongo authentication problems.

--- a/mongo-secret.yaml
+++ b/mongo-secret.yaml
@@ -5,4 +5,4 @@ metadata:
 type: Opaque
 data:
   MONGO_INITDB_ROOT_PASSWORD: a2lyaWxsX2FkbWluNTU=
-  MONGO_INITDB_ROOT_USERNAME: Lm4ga2lyaWxsX2FkbWluCg==
+  MONGO_INITDB_ROOT_USERNAME: a2lyaWxsX2FkbWlu
