Minor changes and mongo-deploy.yaml is ready for a volume hopefully.

--- a/kubernetes/config/aws-sc.yaml
+++ b/kubernetes/config/aws-sc.yaml
@@ -6,5 +6,5 @@ provisioner: kubernetes.io/aws-ebs
 parameters:
   type: gp3
   fstype: ext4
-reclaimPolicy: Retain
+reclaimPolicy: Delete
 volumeBindingMode: WaitForFirstCustomer
