--- a/kubernetes/config/aws-sc.yaml
+++ b/kubernetes/config/aws-sc.yaml
@@ -7,4 +7,4 @@ parameters:
   type: gp3
   fstype: ext4
 reclaimPolicy: Delete
-volumeBindingMode: WaitForFirstCustomer
+volumeBindingMode: WaitForFirstConsumer
