--- a/kubernetes/mongo-deploy.yaml
+++ b/kubernetes/mongo-deploy.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
       - name: mongo
         image: mongo:6.0
+        imagePullPolicy: IfNotPresent
         resources:
           limits:
             memory: "700Mi"
