--- a/kubernetes/secret/grafana-secret.yaml
+++ b/kubernetes/secret/grafana-secret.yaml
@@ -5,4 +5,4 @@ metadata:
 type: Opaque
 data:
   GF_SECURITY_ADMIN_USER: YWRtaW4=
-  GF_SECURITY_ADMIN_PASSWORD: YWRtaW41NQ==
+  GF_SECURITY_ADMIN_PASSWORD: YWRtaW41NQs==
