--- a/kubernetes/grafana-deploy.yaml
+++ b/kubernetes/grafana-deploy.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: grafana
-        image: grafana/grafana:11
+        image: grafana/grafana:11.6.0-ubuntu
         resources:
           limits:
             memory: "128Mi"
