--- a/kubernetes/server-deploy.yaml
+++ b/kubernetes/server-deploy.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
       - name: server-freestyle
         image: 727646485811.dkr.ecr.eu-central-1.amazonaws.com/freestyle-project/server:1.3
+        imagePullPolicy: IfNotPresent
         resources:
           limits:
             memory: "128Mi"
