Changed server-svc to backend-service

--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -10,7 +10,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://server-freestyle-svc:3000;
+        proxy_pass http://backend-svc:3000;
         proxy_set_header HOST $host;
         proxy_set_header X-REAL-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
