--- a/kubernetes/backend-deploy.yaml
+++ b/kubernetes/backend-deploy.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: server-freestyle  
+  name: backend-freestyle  
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: server-freestyle
+      app: backend-freestyle
   template:
     metadata:
       labels:
-        app: server-freestyle
+        app: backend-freestyle
     spec:
       containers:
-      - name: server-freestyle
+      - name: backend-freestyle
         image: 727646485811.dkr.ecr.eu-central-1.amazonaws.com/freestyle-project/server:1.3
         imagePullPolicy: IfNotPresent
         resources:
@@ -46,11 +46,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: server-freestyle-svc
+  name: backend-svc
 spec:
   type: ClusterIP
   selector:
-    app: server-freestyle
+    app: backend-freestyle
   ports:
     - protocol: TCP
       port: 3000
