--- a/kubernetes/deployments/backend-deploy.yaml
+++ b/kubernetes/deployments/backend-deploy.yaml
@@ -16,10 +16,10 @@ spec:
       - name: backend-freestyle
         image: 727646485811.dkr.ecr.eu-central-1.amazonaws.com/freestyle-project/server:1.3
         imagePullPolicy: IfNotPresent
-#        resources:
-#          limits:
-#            memory: "521Mi"
-#            cpu: "1" 
+        resources:
+          limits:
+            memory: "521Mi"
+            cpu: "750m" 
         ports:
         - containerPort: 3000
         env:
