--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -69,7 +69,7 @@ jobs:
 
             <details><summary>Show Plan</summary>
 
-            \`\`\`${{process.env.PLAN }}\`\`\`
+            \`\`\`${process.env.PLAN}\`\`\`
 
             </details>
 
