--- a/.github/workflows/merge_main.yml
+++ b/.github/workflows/merge_main.yml
@@ -1,9 +1,11 @@
-name: Merge to Mian branch
+name: Merge to Main branch
 
 on:
   push:
     branches:
       - main
+    paths:
+      - 'aws/**'
 
 env: 
   TF_LOG: INFO
@@ -43,4 +45,4 @@ jobs:
 
       - name: Terraform Apply
         id: apply
-        run: terraform apply -auto-approve
+        run: terraform apply
